# px4

2.0/: readme.md
2.0/catkin_ws/log/: log.py
2.0/catkin_ws/src/n3ctrl/: CMakeLists.txt
2.0/catkin_ws/src/test_control/: package.xml
2.0/catkin_ws/src/test_control/src/: fusion.cpp  myApi.hpp  xrxr_hello_world.c
2.1/catkin_ws/devel/: .catkin  .rosinstall
2.1/catkin_ws/log/: aekf.py  eso.py  kalman.py  log.py  log_v2.0.py  plot_q.py
2.1/catkin_ws/log/1205night10/: log_acc_x.txt  log_acc_y.txt  log_acc_z.txt  log_hovper.txt  log_odom_q.txt  log_p_x.txt  log_p_y.txt  log_p_z.txt  log_q.txt  log_t.txt  log_target.txt  log_u_pitch.txt  log_u_roll.txt  log_u_thr.txt  log_u_yaw.txt  log_v_x.txt  log_v_y.txt  log_v_z.txt  log_yaw.txt
2.1/catkin_ws/log/1205night11/: log_acc_x.txt  log_acc_y.txt  log_acc_z.txt  log_hovper.txt  log_odom_q.txt  log_p_x.txt  log_p_y.txt  log_p_z.txt  log_q.txt  log_t.txt  log_target.txt  log_u_pitch.txt  log_u_roll.txt  log_u_thr.txt  log_u_yaw.txt  log_v_x.txt  log_v_y.txt  log_v_z.txt  log_yaw.txt
2.1/catkin_ws/log/1205night12/: log_acc_x.txt  log_acc_y.txt  log_acc_z.txt  log_hovper.txt  log_odom_q.txt  log_p_x.txt  log_p_y.txt  log_p_z.txt  log_q.txt  log_t.txt  log_target.txt  log_u_pitch.txt  log_u_roll.txt  log_u_thr.txt  log_u_yaw.txt  log_v_x.txt  log_v_y.txt  log_v_z.txt  log_yaw.txt
2.1/catkin_ws/log/1205night13/: log_acc_x.txt  log_acc_y.txt  log_acc_z.txt  log_hovper.txt  log_odom_q.txt  log_p_x.txt  log_p_y.txt  log_p_z.txt  log_q.txt  log_t.txt  log_target.txt  log_u_pitch.txt  log_u_roll.txt  log_u_thr.txt  log_u_yaw.txt  log_v_x.txt  log_v_y.txt  log_v_z.txt  log_yaw.txt
2.1/catkin_ws/log/1205night14/: log_acc_x.txt  log_acc_y.txt  log_acc_z.txt  log_hovper.txt  log_odom_q.txt  log_p_x.txt  log_p_y.txt  log_p_z.txt  log_q.txt  log_t.txt  log_target.txt  log_u_pitch.txt  log_u_roll.txt  log_u_thr.txt  log_u_yaw.txt  log_v_x.txt  log_v_y.txt  log_v_z.txt  log_yaw.txt
2.1/catkin_ws/log/1205night2/: log_acc_x.txt  log_acc_y.txt  log_acc_z.txt  log_hovper.txt  log_odom_q.txt  log_p_x.txt  log_p_y.txt  log_p_z.txt  log_q.txt  log_t.txt  log_target.txt  log_u_pitch.txt  log_u_roll.txt  log_u_thr.txt  log_u_yaw.txt  log_v_x.txt  log_v_y.txt  log_v_z.txt  log_yaw.txt
2.1/catkin_ws/log/1205night3/: log_acc_x.txt  log_acc_y.txt  log_acc_z.txt  log_hovper.txt  log_odom_q.txt  log_p_x.txt  log_p_y.txt  log_p_z.txt  log_q.txt  log_t.txt  log_target.txt  log_u_pitch.txt  log_u_roll.txt  log_u_thr.txt  log_u_yaw.txt  log_v_x.txt  log_v_y.txt  log_v_z.txt  log_yaw.txt
2.1/catkin_ws/log/1205night4/: log_acc_x.txt  log_acc_y.txt  log_acc_z.txt  log_hovper.txt  log_odom_q.txt  log_p_x.txt  log_p_y.txt  log_p_z.txt  log_q.txt  log_t.txt  log_target.txt  log_u_pitch.txt  log_u_roll.txt  log_u_thr.txt  log_u_yaw.txt  log_v_x.txt  log_v_y.txt  log_v_z.txt  log_yaw.txt
2.1/catkin_ws/log/1205night5/: log_acc_x.txt  log_acc_y.txt  log_acc_z.txt  log_hovper.txt  log_odom_q.txt  log_p_x.txt  log_p_y.txt  log_p_z.txt  log_q.txt  log_t.txt  log_target.txt  log_u_pitch.txt  log_u_roll.txt  log_u_thr.txt  log_u_yaw.txt  log_v_x.txt  log_v_y.txt  log_v_z.txt  log_yaw.txt
2.1/catkin_ws/log/1205night6/: log_acc_x.txt  log_acc_y.txt  log_acc_z.txt  log_hovper.txt  log_odom_q.txt  log_p_x.txt  log_p_y.txt  log_p_z.txt  log_q.txt  log_t.txt  log_target.txt  log_u_pitch.txt  log_u_roll.txt  log_u_thr.txt  log_u_yaw.txt  log_v_x.txt  log_v_y.txt  log_v_z.txt  log_yaw.txt
2.1/catkin_ws/log/1205night7/: log_acc_x.txt  log_acc_y.txt  log_acc_z.txt  log_hovper.txt  log_odom_q.txt  log_p_x.txt  log_p_y.txt  log_p_z.txt  log_q.txt  log_t.txt  log_target.txt  log_u_pitch.txt  log_u_roll.txt  log_u_thr.txt  log_u_yaw.txt  log_v_x.txt  log_v_y.txt  log_v_z.txt  log_yaw.txt
2.1/catkin_ws/log/1205night8/: log_acc_x.txt  log_acc_y.txt  log_acc_z.txt  log_hovper.txt  log_odom_q.txt  log_p_x.txt  log_p_y.txt  (+12 more)
2.1/catkin_ws/src/cmd_ctrl/: CMakeLists.txt  package.xml
2.1/catkin_ws/src/cmd_ctrl/include/: cmd_ctrl.h
2.1/catkin_ws/src/cmd_ctrl/launch/: cmd_ctrl.launch
2.1/catkin_ws/src/cmd_ctrl/src/: cmd_ctrl.cpp  cmd_node.cpp
2.1/catkin_ws/src/remote_control/: CMakeLists.txt
2.1/catkin_ws/src/remote_control/cfg/: dynamic.cfg
2.1/catkin_ws/src/remote_control/msg/src/: main.cpp
2.1/catkin_ws/src/remote_control/src/: gimbalStabilize.cpp
2.1/catkin_ws/src/remote_joy/: CMakeLists.txt
2.1/catkin_ws/src/test_control/: CMakeLists.txt
2.1/catkin_ws/src/test_control/src/: control1.cpp  transform.hpp  vision.cpp
(+984 files in other folders)
